Fixing a couple of issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Paper Sicssors Rock Game</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
         <div class="game-panel-header">
           <div class="round-title">
             <h3>Round:&nbsp;<span class="js-round-counter">0</span>/5</h3>
-            <h3 class="js-player-scores">🤖 0 🧑 0</h3>
+            <h3 class="js-player-scores"></h3>
           </div>
         </div>
         <div class="game-panel-content">
@@ -31,17 +31,16 @@
       </div>
       <div class="result-panel">
         <div class="round-moves">
-          🤖 -
-          <span class="js-computer-move-element">📄</span> &nbsp;&nbsp;&nbsp;
-          <span class="js-human-move-element">📄</span> - 🧑
+          <span class="js-initial-com-icon"></span>
+          <span class="js-computer-move-element"></span> &nbsp;&nbsp;&nbsp;
+          <span class="js-human-move-element"></span
+          ><span class="js-initial-human-icon"></span>
         </div>
         <div class="result-title-content">
-          <h2 class="js-round-title">Round 1</h2>
-          <h2 class="js-round-victor">🤖 Wins!</h2>
+          <h2 class="js-round-title"></h2>
+          <h2 class="js-round-victor"></h2>
         </div>
-        <p class="js-result">
-          https://github.com/elfsmelf/rock-paper-scissors/pull/new/ui
-        </p>
+        <p class="js-result"></p>
       </div>
     </div>
 
